Lab4 (update) Lab5 (add, not complete)

--- a/Lab4/makefile
+++ b/Lab4/makefile
@@ -1,12 +1,15 @@
 CC=gcc
 CGLAGS=-Wall
 
-.PHONY: all clean
+.PHONY: all clean start
 
 all: lab4
 
 lab4: lab4.o
 	$(CC) $(CFLAGS) lab4.o -o lab4
+	
+start: lab4
+	sudo ./lab4
 	
 clean:
 	rm -f lab4 lab4.o 
