Lab4 (complete) Lab5 (complete) with reports

--- a/Lab4/makefile
+++ b/Lab4/makefile
@@ -7,6 +7,9 @@ all: lab4
 
 lab4: lab4.o
 	$(CC) $(CFLAGS) lab4.o -o lab4
+
+lab4.o: lab4.c
+	$(CC) $(CFLAGS) -c lab4.c -o lab4.o
 	
 start: lab4
 	sudo ./lab4
